<resources>
    <string name="app_name" translatable="false">Simple Bluetooth</string>
    <string name="BTconnFail">Connection Failed</string>
    <string name="BTConnected">Connected to Device: </string>
    <string name="sBTdevNF">"Bluetooth device not found!"</string>
    <string name="sBTstaNF">Status: Bluetooth not found</string>
    <string name="BTEnable">Bluetooth enabled</string>
    <string name="sBTturON">Bluetooth turned on</string>
    <string name="BTisON">Bluetooth is already on</string>
    <string name="sEnabled">Enabled</string>
    <string name="sDisabled">Disabled</string>
    <string name="sBTdisabl">Bluetooth disabled</string>
    <string name="BTnotOn">Bluetooth not on</string>
    <string name="lt_bluetooth_status">Bluetooth status</string>
    <string name="BTturOff">Bluetooth turned off</string>
    <string name="cConnet">Connecting…</string>
    <string name="ErrSockCrea">Socket creation failed</string>
    <string name="DisStart">Scan started</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="DisStop">Scan stopped</string>
    <string name="status">"Status: "</string>
    <string name="discover_new_devices">Scan new device</string>
    <string name="scan">Scan for devices</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="status_txt">Status:</string>
    <string name="lt_bluetooth_status_txt"><![CDATA[<Bluetooth Status>]]></string>
    <string name="x_acceleration">X acceleration</string>
    <string name="y_acceleration">Y acceleration</string>
    <string name="z_acceleration">Z acceleration</string>
    <string name="x_angle">X angle</string>
    <string name="y_angle">Y angle</string>
    <string name="z_angle">Z angle</string>
    <string name="not_connected">Not connected</string>
</resources>
